# serverless-city-guide

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  guide.py  main.py  pyproject.toml  requirements.txt  uv.toml
agent/: README.md  graph.py  main.py  nodes.py  prompts.py  state.py
agent/graph/: build_graph.py  state.py
agent/graph/nodes/: gather.py  intake.py  narrate.py  planner.py  reply.py  verify.py
agent/llm/: nebius_client.py
agent/llm/prompts/: narrate_prompt.py  planner_prompt.py  verify_prompt.py
agent/tools/: guide_store.py  web_search.py
agent/tools/geo/: reverse_geocode.py
city_guide/: analyze.py  backends.py  bearing.py  collector.py  config.py  curator.py  http_client.py  logging_config.py  maps_url.py  narrator.py  pipeline.py  place.py  prebake.py  prompts.py  route.py  store.py  types.py  verifier.py
city_guide/sources/: overpass.py  overpass_types.py  tavily.py  wikidata.py  wikidata_types.py  wikipedia.py
docs/: blog-post.md
graph/: build_graph.py  state.py
graph/nodes/: gather.py  intake.py  narrate.py  planner.py  reply.py  verify.py
llm/: nebius_client.py
llm/prompts/: narrate_prompt.py  planner_prompt.py  verify_prompt.py
proofs/: README.md  job-v3-get.json
proofs/guide-covent-garden/: manifest.json  tour.json
proofs/guide-covent-garden/stops/: 0.json  1.json  2.json  3.json  4.json
proofs/guide-covent-garden/trace/: curation.json  meta.json  stop-0.json  stop-1.json  stop-2.json  (+2 more)
proofs/judge-eval/: results_minicheck_Bespoke-MiniCheck-7B.jsonl  results_minicheck_Qwen3-32B.jsonl  results_minicheck_chunked_Bespoke-MiniCheck-7B.jsonl  results_pipeline_Qwen3-32B.jsonl
scripts/: build_dev_dataset.py  deploy_endpoint.sh  error_analysis.py  eval_judge.py  submit_prebake.sh
tests/: conftest.py  test_agent.py  test_analyze.py  test_bearing.py  test_collector.py  test_maps_url.py  test_overpass.py  test_place.py  test_route.py  test_store.py  test_verifier.py  test_wikidata.py  test_wikipedia.py
tests/data/: README.md  dev_claims.jsonl  dev_evidence.json
tools/: guide_store.py  web_search.py
tools/geo/: reverse_geocode.py
